--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -31,7 +31,7 @@
         = image_tag('bg1.jpg')
         .slider-info
           h4 Bienvenido
-          p Lorem ipsum dolor sit amet, consectetur et dolore magna aliqua.
+          p Welcome to the sofe store hehe
           .button.push-double--top
             a href= menu_index_path
               | Ordena Aqui!&nbsp;
@@ -40,7 +40,7 @@
         = image_tag('bg2.jpg')
         .slider-info.full-height
           h4 Pide en linea
-          p Lorem ipsum dolor sit amet, consectetur et dolore magna aliqua.
+          p Me make your life ez, order online
           .button.push-double--top
             a href=menu_index_path
               | Ordena Aqui!&nbsp;
@@ -49,7 +49,7 @@
         = image_tag('bg3.jpg')
         .slider-info
           h4 Sé Feliz
-          p Lorem ipsum dolor sit amet, consectetur et dolore magna aliqua.
+          p Be happy and eat happy
           .button.push-double--top
             a href=menu_index_path
               | Ordena Aqui!&nbsp;
