--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -7,7 +7,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 /*--header--*/
 
 //Application Colors
-$primary-color: #e74c3c;
+$primary-color: #9b59b6;
 $secondary-color: #000000;
 $text-color: #FFFFFF;
 
