--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -12,15 +12,15 @@
       .top-icons
         ul
           li
-            a href="#"
+            a href="https://facebook.com/nearsoftjobs"
               i.fa.fa-facebook aria-hidden="true"
               | Facebook
           li
-            a href="#"
+            a href="https://twitter.com/nearsoftjobs?lang=es"
               i.fa.fa-twitter aria-hidden="true"
               | Twitter
           li
-            a href="#"
+            a href="http://instagram.com/nearsoftjobs"
               i.fa.fa-instagram aria-hidden="true"
               | Instagram
 
