--- a/app/views/admin/layouts/application.html.slim
+++ b/app/views/admin/layouts/application.html.slim
@@ -25,6 +25,12 @@ html
                 ul.nav.navbar-nav
                   li.active
                     = link_to t('admin.navigation.home'), admin_welcome_index_path
+                    li.active
+                    = link_to t('admin.products.home'), admin_welcome_index_path
+                    li.active
+                    = link_to t('admin.orders.home'), admin_welcome_index_path
+                    li.active
+                    = link_to t('admin.customers.home'), admin_welcome_index_path 
                 ul.nav.navbar-nav.navbar-right
                   li
                     = link_to t('admin.navigation.shop'), admin_welcome_index_path
