--- a/app/views/admin/layouts/application.html.slim
+++ b/app/views/admin/layouts/application.html.slim
@@ -26,11 +26,11 @@ html
                   li.active
                     = link_to t('admin.navigation.home'), admin_welcome_index_path
                     li.active
-                    = link_to t('admin.products.home'), admin_welcome_index_path
+                    = link_to t('admin.products.home'), admin_products_index_path
                     li.active
-                    = link_to t('admin.orders.home'), admin_welcome_index_path
+                    = link_to t('admin.orders.home'), admin_orders_index_path
                     li.active
-                    = link_to t('admin.customers.home'), admin_welcome_index_path 
+                    = link_to t('admin.customers.home'), admin_customers_index_path 
                 ul.nav.navbar-nav.navbar-right
                   li
                     = link_to t('admin.navigation.shop'), admin_welcome_index_path
