ya estaba arreglado el filter ayyy :rage: :godmode:

--- a/app/views/admin/products/show.html.slim
+++ b/app/views/admin/products/show.html.slim
@@ -15,6 +15,9 @@
         tr
           td Type:
           td = @product.product_type
+          tr
+          td Type:
+          td = @product.calories
         tr
           td Price:
           td= number_to_currency(@product.price)
